css/style.css
:root {
	box-sizing: border-box;
}

*,
::before,
::after {
	box-sizing: inherit;
}

body {
	background-color: gray;
	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

html,
body {
	height: 100%;
}

body {
	display: flex;
	flex-direction: column;
}

main {
	flex: 1 0 auto;
}

footer {
	flex-shrink: 0;
	align-self: center;
}

footer .author-details a {
	text-decoration: none;
	color: firebrick;
}

footer .author-details a:hover {
	color: rgba(178, 34, 34, 0.712);
}

header {
	align-self: center;
}

header .title {
	text-transform: uppercase;
	letter-spacing: 3px;
	margin-bottom: 0;
}

header .description {
	text-transform: lowercase;
	text-align: center;
	margin-top: 0;
	font-style: oblique;
}

/*  ===========================================================================
    ===========================================================================
 */

.container {
	max-width: 1080px;
	width: 500px;
	margin: 0 auto;
}

.calc-casing {
	width: 269px;
	margin: 0 auto;
	border: 5px solid rgb(16, 26, 24);
	height: 60vh;

	/* ============ */
	margin-top: 3em;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: repeat(10, 1fr);
	gap: 5px;
	text-align: center;
}

.calc-display-container {
	text-align: right;
	grid-column-start: 1;
	grid-column-end: 4;
	grid-row-start: 1;
	grid-row-end: 4;
}

.calc-digit-container {
	margin-right: 3px;
	grid-column-start: 1;
	grid-column-end: 3;
}

.calc-digit-container,
.calc-operator-container {
	grid-row-start: 5;
	grid-row-end: 11;
	height: 100%;
	/* border: 2px solid red; */
}

.calc-display-container {
	border-bottom: 2px solid rgb(16, 26, 24);
}

.calc-operator-container {
	border-left: 1px solid rgba(20, 27, 26, 0.945);
}

/* 
    =========================================================================
    =========================================================================
*/

.calc-digit-container {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	gap: 7px;
	/* margin-bottom: 45px; */
}

.digit {
	text-align: center;
	padding-top: 10px;
}

.digit:hover,
.operator:hover,
#backspace:hover,
#square-root:hover {
	cursor: pointer;
}

.digit:active,
.operator:active,
#square-root:active,
#backspace:active {
	transform: scale(2);
}

/* 
	==========================================================================
	==========================================================================
*/

.calc-display-container {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: repeat(2, 1fr);
}

.small-display {
	border-bottom: 0.1px solid rgba(16, 26, 24, 0.226);
	grid-column-start: 1;
	grid-column-end: 4;
	grid-row-start: 1;
	grid-row-end: 2;
	text-align: left;
}

.large-display {
	grid-column-start: 1;
	grid-column-end: 4;
	grid-row-start: 2;
	grid-row-end: 4;
}

.large-display,
.small-display {
	padding: 8px;
	padding-top: 1.4em;
}

.large-display {
	padding-top: 1.7em;
}

/* 
	========================================================================================
	========================================================================================
*/

.operator {
	font-size: 1.3em;
}

.calc-operator-container {
	display: grid;
	margin-top: 5px;
	
}


/* 
	========================================================================================
	========================================================================================
*/

